# huanlang

./: .gitattributes  .gitignore  .gitlab-ci.yml  Cargo.toml  DOTO.md  LICENSE  QUICKSTART.md  README.md  build.ps1  build.rs  build_log.txt  files.txt  huan_config.json  icon_generator.rs  output.txt  run_examples.bat  run_examples.ps1  test_custom_config.json  test_examples.ps1  test_hello.hl  test_lexer.rs  test_report.md  幻语编程语言 - 完整详细的开发规范文档.md  自动化流程总结.md  项目交付文档.md
.github/workflows/: ci.yml
dialects/: CMakeLists.txt
dialects/include/huan/: HuanDialect.h  HuanOps.td  HuanTypes.td
dialects/lib/: HuanDialect.cpp  HuanOps.cpp  HuanTypes.cpp  LowerHuanToArith.cpp  LowerHuanToFunc.cpp  LowerHuanToLLVM.cpp  LowerHuanToSCF.cpp
docs/: 幻语包管理器使用指南.md  幻语编程语言标准规范.md  性能优化与调试支持使用指南.md  标准库文档.md
docs/开发规范文档/: 01_语言标识与文件格式.md  02_三语关键词系统.md  03_词法分析规范.md  04_语法解析规范.md  05_抽象语法树_AST_完整定义.md  05_抽象语法树（AST）完整定义.md  06_语义分析与类型系统.md  07_内存管理与所有权模型.md  08_并发模型规范.md  09_汇编与裸机编程规范.md  10_MLIR_方言定义与降级规范.md  11_后端代码生成接口.md  12_互操作与跨语言转换框架.md  13_内置终端编辑器规范.md  14_AI_交换格式_hla_完整规范.md  15_标准库_API_完整定义.md  16_工具链与命令行接口.md  17_语言服务器协议_LSP_扩展规范.md  17_语言服务器协议（LSP）扩展规范.md  18_测试框架与基准测试规范.md  19_包管理器与注册表规范.md  20_性能优化与调试支持.md  21_附录_完整示例与测试用例.md  21_附录：完整示例与测试用例.md  22_文档索引与资源指南.md  README.md  幻语编程语言 - 完整详细的开发规范文档.md  文档风格指南.md
docs/用户开发使用文档/: 基本语法教程.md  快速入门指南.md  性能优化指南.md  构建运行全链路自动化配置.md  标准库使用指南.md  调试与测试指南.md  项目结构与配置.md
examples/: README.md  algorithms.hl  asm_baremetal_demo.hl  asm_demo.hl  binding_example.rs  cli_example.rs  collections.hl  complete_llvm_gen.rs  concurrency_example.hl  control_flow.hl  data_processing.hl  data_processing_simple.hl  debug_block.rs  debug_parser.rs  debug_parser_detailed.rs  debug_stmt.rs  demo.hl  demo_llvm_codegen.rs  error_handling.hl  example.hla  ffi_example.rs  fibonacci.hl  file_processing.hl  functions.hl  generated_llvm_ir.ll  hello.hl  hello.ll  hello_simple.hl  hello_world.hl  import_selective.hl  import_test.hl  interop_demo.hl  interop_integration.rs  lsp_example.rs  network_example.hl  oop.hl  performance_demo.rs  simple_demo.hl  simple_llvm_gen.rs  simple_test.hl  (+14 more)
examples/advanced/: 高级特性全览.hl
examples/assembly/: 裸机编程演示.hl
examples/basic/: 你好世界.hl  变量示例.hl  基础语法全览.hl  控制流全览.hl  控制流示例.hl
examples/basic_project/: .gitignore  README.md  幻语包.toml
examples/comprehensive/: 数据处理示例.hl  数组测试示例.hl
examples/concurrency/: 并发示例.hl
examples/data_structures/: 数据结构全览.hl  算法示例.hl  结构体示例.hl  集合示例.hl
examples/error_handling/: 错误处理示例.hl
examples/features_example/: 幻语包.toml
examples/file_io/: 文件处理示例.hl
examples/functions/: 函数与递归全览.hl  函数示例.hl
examples/interop/: 跨语言互操作示例.hl
examples/network/: 网络请求示例.hl
examples/oop/: 排序算法示例.hl  方法调用示例.hl  面向对象示例.hl
examples/performance/: 性能优化示例.hl
examples/performance_example/: 幻语包.toml
examples/workspace_example/: 幻语包.toml
examples/基础/: HelloWorld.hl  计算和.hl  阶乘.hl
resources/: app.rc
runtime/: CMakeLists.txt
runtime/include/: huanrt.h
runtime/src/: allocator.c  console.c  huanrt.c  io.c  list.c  map.c  string.c
scripts/: test-llvm.ps1
src/: file_format.rs  lang_identity.rs  lib.rs  lib.幻  main.rs  main.幻
src/backend/: mod.rs
src/core/: mod.rs
src/interpreter/: env.rs  interpreter.rs  mod.rs  value.rs
src/lsp/: diagnostics.rs  document.rs  error.rs  extensions.rs  main.rs  mod.rs  semantic_tokens.rs  server.rs  symbol_table.rs
src/package/: cache.rs  commands.rs  config.rs  dependency.rs  error.rs  lockfile.rs  manifest.rs  mod.rs  registry.rs  (+3 more)
test_package/: README.md  幻语包.toml
tests/: basic_tests.hl  concurrency_tests.hl  crypto_tests.rs  data_structures_tests.hl  error_handling_tests.hl  functions_tests.hl  interpreter_test.rs  mlir_tests.rs  net_tests.rs  runtime_tests.rs  stdlib_tests.rs  time_tests.rs
(+165 files in other folders)
