[package]
name = "huanlang"
version = "0.4.0"
edition = "2021"
authors = ["幻心梦梦（huanxinmengmeng）"]
description = "幻语（HuanLang）编程语言 - 支持中文、拼音、英文三语关键词的现代化编程语言"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://gitee.com/huanxinmengmeng/huanlang"
repository = "https://gitee.com/huanxinmengmeng/huanlang"
keywords = ["programming-language", "compiler", "huanlang", "chinese-keywords"]
categories = ["compiler", "programming-languages"]
rust-version = "1.70"

[lib]
name = "huanlang"
path = "src/lib.rs"

[[bin]]
name = "huan"
path = "src/main.rs"

[features]
default = []
llvm = ["inkwell"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
cfg-if = "1.0"
codespan-reporting = "0.11"
hashbrown = "0.14"
parking_lot = "0.12"
smallvec = "1.11"
tempfile = "3.8"
libc = "0.2"
lazy_static = "1.4"
# 编辑器依赖
crossterm = "0.27"
ropey = "1.6"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
unicode-width = "0.1"
termcolor = "1.4"
yansi = "1.0"
memchr = "2.7"
unicode-segmentation = "1.11"
# 网络和加密依赖
ureq = "2.9"
urlencoding = "2.1"
url = "2.4"
rand = "0.8"
sha2 = "0.10"
hmac = "0.12"
tokio = { version = "1.0", features = ["rt", "time"] }
num-traits = "0.2"
serde_json = "1.0"
# 时间处理依赖
chrono = "0.4"
# 加密依赖
aes-gcm = { version = "0.10", features = ["aes", "alloc"] }
argon2 = "0.5"
password-hash = "0.5"
ring = "0.17"
# REPL依赖
rustyline = "11.0"
# 动态库加载依赖
libloading = "0.8"
# 包管理器依赖
reqwest = { version = "0.11", features = ["blocking", "json"] }
base64 = "0.21"
# LLVM 代码生成依赖
inkwell = { version = "0.5.0", features = ["llvm16-0-no-llvm-linking"], optional = true }

[build-dependencies]
image = "0.24"
winres = "0.1"

[dev-dependencies]
pretty_assertions = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true